/*
	Copyright(c) 2018 Gluwa, Inc.

	This file is part of Creditcoin.

	Creditcoin is free software: you can redistribute it and/or modify
	it under the terms of the GNU Lesser General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
	GNU Lesser General Public License for more details.
	
	You should have received a copy of the GNU Lesser General Public License
	along with Creditcoin. If not, see <https://www.gnu.org/licenses/>.
*/
syntax = "proto3";

message DealOrder {
    string blockchain = 1;
    string src_address = 2;
    string dst_address = 3;
    string amount = 4;
    string interest = 5;
    string maturity = 6;
    string fee = 7;
    uint64 expiration = 8;
    string block = 9;
    string loan_transfer = 10;
    string repayment_transfer = 11;
    string lock = 12;
    string sighash = 13;
}
